# UniqueID

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: release.yml  tests.yml
python/simpleuid/: __init__.py  types.py
python/tests/: test_all.py  test_alpha.py  test_alphanumeric.py  test_numeric.py  test_var.py
src/: alphanumeric.rs  constants.rs  lib.rs  main.rs  numeric.rs
src/methods/: alpha.rs  alphanumeric.rs  integer.rs  mod.rs  numeric.rs  var.rs
src/simpleUID/: __init__.py  constants.py  exceptions.py  include.py  simpleUID.py  types.py
src/simpleUID/methods/: alpha.py
src/strig/: __init__.py  constants.py  strig.py
src/strig/functions/: alphanumeric.py  numeric.py  password.py  urlsafe.py  var.py
src/strig/functions/var_methods/: dates.py  os.py  system.py
src/strig/methods/: alpha.py  numeric.py
src/uid/: __init__.py
src/uniqueID/: __init__.py  uniqueID.py
tests/: test_alpha.py  test_alphanumeric.py  test_numeric.py  test_password.py  test_urlsafe.py  test_var.py  utils.py
